# run-browser

./: .coveragerc  .flake8  .gitattributes  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.rst  pyproject.toml
.github/workflows/: ci.yml
docs/: conf.py
docs/source/: api.rst  conf.py  index.rst
src/run_browser/: __init__.py  __main__.py  _version.py  client.py  display.py  frameset_view.py  frameset_view.ui  gridplot_view.py  gridplot_view.ui  lineplot_view.ui  main_window.py  main_window.ui  multiplot_view.py  multiplot_view.ui  run_browser.ui  spectra_view.py  spectra_view.ui  testing.py  widgets.py
tests/: conftest.py  test_client.py  test_display.py  test_frameset_view.py  test_gridplot_view.py  test_lineplot_view.py  test_main_window.py  test_metadata_view.py  test_multiplot_view.py  test_spectra_view.py
