[project]
name = "run-browser"
version = "0.0.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "run-browser"
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]
keywords = []
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    # We temporarily have this development branch of Tiled so that we get an async client
    # "tiled>=0.1.0",
    "tiled[all]@git+https://github.com/spc-group/tiled.git@d8b372c5ac40f3a5975167ca71ae6a8e43719707",
    # Weird tiled dependencies, removed when async client is merged upstream
    "llvmlite>=0.44.0",
    "numba>=0.61.2",
    "pyqtgraph",
    "PySide6",
    "qtpy",
    "qtawesome",
    "matplotlib",
    "qasync",
]

[dependency-groups]
dev = ["black", "pytest", "pytest-asyncio", "pytest-qt", "pytest-mock", "ruff", "isort", "mypy", "time_machine"]

[project.urls]
Homepage = "https://github.com/spc-group/run-browser"

[project.scripts]
# command = "run_browser.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]
