[project]
name = "run-browser"
version = "0.0.0"
authors = [
  { name="Mark Wolfman", email="wolfman@anl.gov" },
]
description = "run-browser"
readme = "README.rst"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
]
keywords = []
dependencies = [
    "numpy",
    "pandas",
    "xarray",
    "pyqtgraph",
    "PySide6",
    "qtpy",
    "qtawesome",
    "matplotlib",
    "qasync",
    "scipy",
    # We temporarily have this development branch of Tiled so that we get an async client
    # "tiled>=0.1.0",
    "tiled[all]@git+https://github.com/spc-group/tiled.git@72a44c1b3a1bb03b31c27d3ec2a2e8c896d4ef09",
]

[dependency-groups]
dev = [
    "black",
    "pytest",
    "pytest-asyncio",
    "pytest-qt",
    "pytest-mock",
    "pytest-xvfb",
    "ruff",
    "isort",
    "mypy",
    "time_machine"
]

[project.urls]
Homepage = "https://github.com/spc-group/run-browser"

[project.scripts]
"run-browser" = "run_browser.__main__:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src/"]
follow_imports = "skip"
follow_untyped_imports = true

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "F401"]

[tool.pixi.dependencies]
qt6-main = ">=6.9.2,<7"
pyside6 = ">=6.9.2,<7"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
run-browser = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }
py312 = ["dev", "py312"]
py313 = ["dev", "py313"]

[tool.pixi.tasks]

[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
